Exercise B Functions Solved

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 hello/target/
 variables/target/
-exercise_a_variables/target/\
+exercise_a_variables/target/
 functions/target/
+exercise_b_functions/target/
