exercise C simple types unsolved

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ functions/target/
 exercise_b_functions/target/
 module_system/target/
 scaler_types/target/
+compound_types/target/
+exercise_c_simple_types/target/
