unsolved exercise_d_control_flow_strings

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ compound_types/target/
 exercise_c_simple_types/target/
 control_flow/target/
 strings/target/
+exercise_d_control_flow_strings/target/
