update .git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ exercise_c_simple_types/target/
 control_flow/target/
 strings/target/
 exercise_d_control_flow_strings/target/
+ownership/target/
+references_borrowing/target/
