--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ strings/target/
 exercise_d_control_flow_strings/target/
 ownership/target/
 references_borrowing/target/
+exercise_e_ownership_references/target/
