closures in rust

--- a/.gitignore
+++ b/.gitignore
@@ -19,4 +19,4 @@ exercise_f_structs_traits/target/
 collections/target/
 enums/target/
 exercise_g_collections_enums/target/
-exercise_g_collections_enums
+closures/target/
